; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_sym.c_exitscope.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_sym.c_exitscope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i64, %struct.TYPE_6__*, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64, %struct.TYPE_4__* }

@level = common dso_local global i64 0, align 8
@types = common dso_local global %struct.TYPE_5__* null, align 8
@identifiers = common dso_local global %struct.TYPE_6__* null, align 8
@Aflag = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"more than 127 identifiers declared in a block\0A\00", align 1
@GLOBAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exitscope() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = load i64, i64* @level, align 8
  %4 = call i32 @rmtypes(i64 %3)
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** @types, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @level, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %0
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** @types, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** @types, align 8
  br label %14

14:                                               ; preds = %10, %0
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** @identifiers, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @level, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %54

20:                                               ; preds = %14
  %21 = load i32, i32* @Aflag, align 4
  %22 = icmp sge i32 %21, 2
  br i1 %22, label %23, label %50

23:                                               ; preds = %20
  store i32 0, i32* %1, align 4
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** @identifiers, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 2
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  store %struct.TYPE_4__* %26, %struct.TYPE_4__** %2, align 8
  br label %27

27:                                               ; preds = %45, %23
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %29 = icmp ne %struct.TYPE_4__* %28, null
  br i1 %29, label %30, label %36

30:                                               ; preds = %27
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @level, align 8
  %35 = icmp eq i64 %33, %34
  br label %36

36:                                               ; preds = %30, %27
  %37 = phi i1 [ false, %27 ], [ %35, %30 ]
  br i1 %37, label %38, label %49

38:                                               ; preds = %36
  %39 = load i32, i32* %1, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %1, align 4
  %41 = icmp sgt i32 %40, 127
  br i1 %41, label %42, label %44

42:                                               ; preds = %38
  %43 = call i32 @warning(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  br label %49

44:                                               ; preds = %38
  br label %45

45:                                               ; preds = %44
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 1
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %47, align 8
  store %struct.TYPE_4__* %48, %struct.TYPE_4__** %2, align 8
  br label %27

49:                                               ; preds = %42, %36
  br label %50

50:                                               ; preds = %49, %20
  %51 = load %struct.TYPE_6__*, %struct.TYPE_6__** @identifiers, align 8
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %51, i32 0, i32 1
  %53 = load %struct.TYPE_6__*, %struct.TYPE_6__** %52, align 8
  store %struct.TYPE_6__* %53, %struct.TYPE_6__** @identifiers, align 8
  br label %54

54:                                               ; preds = %50, %14
  %55 = load i64, i64* @level, align 8
  %56 = load i64, i64* @GLOBAL, align 8
  %57 = icmp sge i64 %55, %56
  %58 = zext i1 %57 to i32
  %59 = call i32 @assert(i32 %58)
  %60 = load i64, i64* @level, align 8
  %61 = add nsw i64 %60, -1
  store i64 %61, i64* @level, align 8
  ret void
}

declare dso_local i32 @rmtypes(i64) #1

declare dso_local i32 @warning(i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
